--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,6 +14,10 @@
     ~/.bashrc: .bashrc
     ~/.profile: .profile
     ~/.hushlogin: .hushlogin
+    ~/.cargo/:
+       glob: true
+       path: cargo/*
+       relink: true
 - shell:
   - git submodule sync --recursive
-  - git update-submodules
+
