--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -18,6 +18,7 @@
        glob: true
        path: cargo/*
        relink: true
+    ~/.gitconfig: .gitconfig
 - shell:
   - git submodule sync --recursive
 
