--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -19,6 +19,7 @@
        path: cargo/*
        relink: true
     ~/.gitconfig: .gitconfig
+    /etc/mpd.conf: mpd.conf
 - shell:
   - git submodule sync --recursive
 
