feat: add cuda path feat: add clash script fix: remove useless alsa config

--- a/mpd.conf
+++ b/mpd.conf
@@ -8,34 +8,9 @@ state_file "~/.cache/cantata/mpd/state"
 log_file "/dev/null"
 zeroconf_enabled "no"
 metadata_to_use	"artist,album,title,track,name,genre,date,disc,albumartist,composer,musicbrainz_albumid,originaldate,albumartistsort,artistsort,albumsort"
-decoder {
-    # 插件的名称
-    plugin "ffmpeg"
-    enabled  "yes"
-}
-decoder {
-        plugin                  "hybrid_dsd"
-        enabled                 "no"
-#       gapless                 "no"
-}
-decoder {
-        plugin        "wildmidi"
-        enabled       "no"
-        #config_file "/etc/timidity/timidity.cfg"
-}
-decoder {
-    plugin 		 "dsf"       # Decodes DSF files containing DSDIFF data (e.g. SACD rips).
-    enabled             "yes"
-}
-
-decoder {
-    plugin              "dsdiff"    # Decodes DFF files containing DSDIFF data (e.g. SACD rips).
-    enabled             "yes"
-}
-
 audio_output { 
- type              "pipewire" 
- name              "Test" 
+ type              "alsa" 
+ name              "DAC" 
  device            "hw:1,0"
  mixer_type        "hardware"
  dop           	   "yes"
@@ -44,7 +19,12 @@ audio_output {
  auto_format       "no"
  stop_dsd_silence "yes"
 }
-
+#for obs 
+audio_output {
+        type "pulse"
+        name "Output"
+        mixer_type "software"
+} 
 audio_buffer_size "8192"
 filesystem_charset "UTF-8"
 id3v1_encoding "UTF-8"
