--- a/cargo/config.toml
+++ b/cargo/config.toml
@@ -1,6 +1,5 @@
 #[http]
 #proxy = "127.0.0.1:7890"
-
 #[https]
 #proxy = "127.0.0.1:7890"
 [net]
@@ -8,17 +7,26 @@ git-fetch-with-cli=true
 
 [build]
 rustc-wrapper = "sccache"
-incremental = true 
+incremental = true
+rustflags = [
+"-Ctarget-cpu=native",
+"-Clink-arg=-fuse-ld=mold"]
 
 [profile.dev]
-opt-level = 0  # Controls the --opt-level the compiler builds with
-debug = true   # Controls whether the compiler passes `-g`
+codegen-backend = "cranelift"
+debug = false
+opt-level = 1
+
+[profile.dev.package."*"]
+codegen-backend = "llvm"
+opt-level = 3
 
 [profile.release]
 debug=true
-[target.x86_64-unknown-linux-gnu]
+codegen-units = 1
+lto = true
+panic = "abort"
+strip = "symbols"
 
-rustflags = [
-   "-Clinker=clang",
-   "-Clink-arg=-fuse-ld=/bin/mold"]
-
+[unstable]
+codegen-backend = true
