--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,25 +1,26 @@
 - defaults:
-    link:
-      relink: true
-      create: true
-- clean: ['~', '~/bin']
+      link:
+          relink: true
+          create: true
+- clean: ["~", "~/bin"]
 - link:
-    ~/.config/alacritty: alacritty
-    ~/.zshrc: .zshrc
-    ~/bin:
-      glob: true
-      path: scripts/*
-      relink: true
-    ~/.dotfiles: ''
-    ~/.bashrc: .bashrc
-    ~/.profile: .profile
-    ~/.hushlogin: .hushlogin
-    ~/.cargo/:
-       glob: true
-       path: cargo/*
-       relink: true
-    ~/.gitconfig: .gitconfig
-    ~/.local/share/cantata/mpd/mpd.conf: mpd.conf
+      ~/.config/alacritty: alacritty
+      ~/.zshrc: .zshrc
+      ~/bin:
+          glob: true
+          path: scripts/*
+          relink: true
+      ~/.dotfiles: ""
+      ~/.bashrc: .bashrc
+      ~/.profile: .profile
+      ~/.hushlogin: .hushlogin
+      ~/.cargo/:
+          glob: true
+          path: cargo/*
+          relink: true
+      ~/.gitconfig: .gitconfig
+      ~/.local/share/cantata/mpd/mpd.conf: mpd.conf
+      ~/.config/zed: zed
+      ~/.config/mise: mise
 - shell:
-  - git submodule sync --recursive
-
+      - git submodule sync --recursive
